Bug 559499. Don't need to put the children of nsCanvasFrame in a psuedo-stacking-context. r=mats